src/tests/errors/functions/004.ura
// errors/functions/004 — argument type mismatch
use "@/header"

fn show(s chars) void:
    output(s, "\n")

main():
    show(42)
